--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "generate-docs": "solc --include-path node_modules --base-path . --combined-json userdoc,devdoc src/BasedAppManager.sol --output-dir ./docs --overwrite",
     "prepare": "husky",
     "test": "forge test -vvvv",
+    "test-coverage": "forge coverage",
     "verify-implementation": "forge verify-contract --chain holesky $IMPLEMENTATION_ADDRESS src/BasedAppManager.sol:BasedAppManager --etherscan-api-key $ETHERSCAN_API_KEY"
   },
   "keywords": [
