--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "build": "forge fmt && forge build",
     "deploy": "forge script script/DeployProxy.s.sol --rpc-url $HOLESKY_RPC_URL --private-key $PRIVATE_KEY --broadcast",
     "format": "forge fmt",
-    "gas-report": "forge test -vvvv --gas-report",
+    "gas-report": "forge test --gas-report",
     "generate-docs": "solc --include-path node_modules --base-path . --combined-json userdoc,devdoc src/BasedAppManager.sol --output-dir ./docs --overwrite",
     "prepare": "husky",
     "lint:solhint": "solhint './src/**/*.sol'",
-    "test": "forge test -vvvv",
+    "test": "forge test",
     "test-coverage": "forge coverage --no-match-coverage \"(script|test)\"",
     "test-coverage-report": "forge coverage --no-match-coverage \"(script|test)\" --report lcov && genhtml lcov.info -o report --branch-coverage",
     "verify-implementation": "forge verify-contract --chain holesky $IMPLEMENTATION_ADDRESS src/BasedAppManager.sol:BasedAppManager --etherscan-api-key $ETHERSCAN_API_KEY"
