--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/ssvlabs/based-applications.git"
   },
-  "license": "UNLICENSED",
+  "license": "GPL-3.0",
   "keywords": [
     "Based",
     "BApps",
