--- a/foundry.toml
+++ b/foundry.toml
@@ -3,9 +3,9 @@ src = "src"
 out = "out"
 libs = ["lib"]
 solc = "0.8.28"
-gas_reports = ["*"]
 optimizer = true
-optimizer_runs = 200
+optimizer_runs = 2000
+gas_reports = ["BasedAppManager"]
 
 [fmt]
 bracket_spacing = false
