--- a/foundry.toml
+++ b/foundry.toml
@@ -10,8 +10,8 @@ gas_reports = ["BasedAppManager"]
 [fmt]
 bracket_spacing = false
 int_types = "long"
-line_length = 120
-multiline_func_header = "params_first"
+line_length = 130
+multiline_func_header = "attributes_first"
 number_underscore = "thousands"
 quote_style = "double"
 tab_width = 4
