--- a/.github/workflows/foundry-gas-diff.yml
+++ b/.github/workflows/foundry-gas-diff.yml
@@ -5,13 +5,9 @@ on:
     branches:
       - main
   pull_request:
-    # Optionally configure to run only for changes in specific files. For example:
-    # paths:
-    # - src/**
-    # - test/**
-    # - foundry.toml
-    # - remappings.txt
-    # - .github/workflows/foundry-gas-diff.yml
+
+permissions:
+  pull-requests: write  # This grants write access to PRs
 
 jobs:
   compare_gas_reports:
