--- a/foundry.toml
+++ b/foundry.toml
@@ -4,8 +4,8 @@ out = "out"
 libs = ["lib"]
 solc = "0.8.28"
 optimizer = true
-optimizer_runs = 20000
-gas_reports = ["BasedAppManager"]
+optimizer_runs = 1
+gas_reports = ["*"]
 
 [fmt]
 bracket_spacing = false
@@ -17,4 +17,4 @@ quote_style = "double"
 tab_width = 4
 
 [fuzz]
-runs = 1000
+runs = 5
