--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "deploy": "npm run build && forge script script/DeployProxy.s.sol --rpc-url $HOLESKY_RPC_URL --private-key $PRIVATE_KEY --broadcast",
     "format": "forge fmt",
     "gas-report": "forge test --gas-report",
-    "generate-docs": "solc --include-path node_modules --base-path . --combined-json userdoc,devdoc src/BasedAppManager.sol --output-dir ./docs --overwrite",
+    "generate-docs": "solc --include-path node_modules --base-path . --combined-json userdoc,devdoc src/SSVBasedApps.sol --output-dir ./docs --overwrite",
     "prepare": "husky",
     "lint:solhint": "solhint './src/**/*.sol'",
     "test": "forge test",
     "test-coverage": "forge coverage --no-match-coverage \"(script|test)\"",
     "test-coverage-report": "forge coverage --no-match-coverage \"(script|test)\" --report debug > test.txt",
-    "verify-implementation": "forge verify-contract --chain holesky $IMPLEMENTATION_ADDRESS src/BasedAppManager.sol:BasedAppManager --etherscan-api-key $ETHERSCAN_API_KEY"
+    "verify-implementation": "forge verify-contract --chain holesky $IMPLEMENTATION_ADDRESS src/SSVBasedApps.sol:SSVBasedApps --etherscan-api-key $ETHERSCAN_API_KEY"
   },
   "devDependencies": {
     "@openzeppelin/contracts-upgradeable": "^5.2.0",
