--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "compile": "forge compile",
     "build": "forge fmt && forge clean && forge build",
-    "deploy": "npm run build && forge script script/DeployProxy.s.sol --rpc-url $HOLESKY_RPC_URL --private-key $PRIVATE_KEY --broadcast",
+    "deploy-holesky": "npm run build && forge script script/DeployProxy.s.sol --rpc-url $HOLESKY_RPC_URL --private-key $PRIVATE_KEY --broadcast",
+    "deploy-devnet7": "npm run build && forge script script/DeployProxy.s.sol --rpc-url $DEVNET7_RPC_URL --private-key $PRIVATE_KEY --broadcast",
     "format": "forge fmt",
     "gas-report": "forge test --gas-report",
     "generate-docs": "solc --include-path node_modules --base-path . --combined-json userdoc,devdoc src/SSVBasedApps.sol --output-dir ./docs --overwrite",
