gas: saving 30/50 gas

--- a/foundry.toml
+++ b/foundry.toml
@@ -5,7 +5,7 @@ libs = ["lib"]
 solc = "0.8.28"
 optimizer = true
 optimizer_runs = 1
-gas_reports = ["src/SSVBasedApps", "src/BasedAppManagement"]
+gas_reports = ["*"]
 
 [fmt]
 bracket_spacing = false
