chore: <- update package.json scripts

--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "compile": "forge compile",
     "build": "forge fmt && forge clean && forge build",
     "deploy:holesky": "npm run build && forge script script/DeployProxy.s.sol --rpc-url $HOLESKY_RPC_URL --private-key $PRIVATE_KEY --verify -vvv --broadcast",
-    "deploy:devnet7": "npm run build && forge script script/DeployProxy.s.sol --chain-id 7032118028 --rpc-url $DEVNET7_RPC_URL --private-key $PRIVATE_KEY --verify --verifier blockscout --verifier-url 'https://explorer-api.pectra-devnet-7.ethpandaops.io/api/' --broadcast",
-    "deploy:hoodi": "npm run build && forge script script/DeployProxy.s.sol --rpc-url $HOODI_RPC_URL --private-key $PRIVATE_KEY --verifier blockscout --verifier-url 'https://hoodi.cloud.blockscout.com/api/' -vvv --broadcast",
-    "verify:hoodi": "forge verify-contract --rpc-url https://hoodi.cloud.blockscout.com/api/eth-rpc --verifier blockscout --verifier-url 'https://hoodi.cloud.blockscout.com/api/' $IMPLEMENTATION_ADDRESS src/SSVBasedApps.sol:SSVBasedApps",
+    "deploy:hoodi": "npm run build && forge script script/DeployProxy.s.sol --rpc-url $HOODI_RPC_URL --private-key $PRIVATE_KEY --verify -vvv --broadcast --etherscan-api-key $ETHERSCAN_API_KEY",
     "format": "forge fmt",
     "gas-report": "forge test --gas-report",
     "generate-docs": "solc --include-path node_modules --base-path . --combined-json userdoc,devdoc src/SSVBasedApps.sol --output-dir ./docs --overwrite",
