--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "compile": "forge compile",
     "build": "forge fmt && forge clean && forge build",
     "deploy:holesky": "npm run build && forge script script/DeployProxy.s.sol --rpc-url $HOLESKY_RPC_URL --private-key $PRIVATE_KEY --verify -vvv --broadcast",
-    "deploy:hoodi": "npm run build && forge script script/DeployProxy.s.sol --rpc-url $HOODI_RPC_URL --private-key $PRIVATE_KEY --verify -vvv --broadcast --etherscan-api-key $ETHERSCAN_API_KEY",
+    "deploy:hoodi": "npm run build && forge script script/DeployProxy.s.sol --rpc-url $HOODI_RPC_URL --private-key $PRIVATE_KEY --etherscan-api-key $ETHERSCAN_API_KEY --verify -vvv --broadcast",
     "format": "forge fmt",
     "gas-report": "forge test --gas-report",
     "generate-docs": "solc --include-path node_modules --base-path . --combined-json userdoc,devdoc src/SSVBasedApps.sol --output-dir ./docs --overwrite",
