--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "generate-docs": "solc --include-path node_modules --base-path . --combined-json userdoc,devdoc src/SSVBasedApps.sol --output-dir ./docs --overwrite",
     "prepare": "husky",
     "lint:solhint": "solhint './src/**/*.sol'",
+    "lint:check": "prettier --check **.sol",
+    "lint:fix": "prettier --write **.sol",
     "test": "forge test",
     "test-coverage": "forge coverage --no-match-coverage \"(script|test)\"",
     "test-coverage-report": "forge coverage --no-match-coverage \"(script|test)\" --report debug > test.txt"
@@ -36,6 +38,8 @@
     "@openzeppelin/contracts-upgradeable": "^5.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
+    "prettier": "^3.5.3",
+    "prettier-plugin-solidity": "^1.4.2",
     "solhint": "^5.0.5"
   },
   "lint-staged": {
