feat: <- update CI with new prettier

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run Forge fmt
         run: |
-          forge fmt --check
+          npm run lint:check
         id: fmt
 
       - name: Run Forge build
