--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,19 +20,27 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
+
+      - name: Install dependencies
+        run: |
+          npm install
+
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
-        with:
-          version: nightly
 
       - name: Show Forge version
         run: |
           forge --version
 
-      - name: Run Forge fmt
+      - name: Run Prettier Format Check
         run: |
-          forge fmt --check
-        id: fmt
+          npm run lint:check
 
       - name: Run Forge build
         run: |
@@ -43,15 +51,3 @@ jobs:
         run: |
           forge test -vvv
         id: test
-
-      - name: Run Slither
-        uses: crytic/slither-action@v0.4.0
-        id: slither
-        with:
-          sarif: results.sarif
-          fail-on: none
-      
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: ${{ steps.slither.outputs.sarif }}
