--- a/foundry.toml
+++ b/foundry.toml
@@ -1,21 +1,26 @@
 [profile.default]
+solc = "0.8.29"
 src = "src"
 out = "out"
 libs = ["lib"]
-solc = "0.8.28"
 optimizer = true
-optimizer_runs = 1
+optimizer_runs = 10_000
 gas_reports = ["*"]
 gas_reports_ignore = ["ERC20Mock", "BasedAppMock", "BasedAppMock2", "BasedAppMock3", "ERC1967Proxy"]
 
 [fmt]
 bracket_spacing = false
 int_types = "long"
-line_length = 130
+line_length = 160
 multiline_func_header = "attributes_first"
 number_underscore = "thousands"
 quote_style = "double"
 tab_width = 4
 
 [fuzz]
-runs = 10
+runs = 5
+
+[profile.ci]
+verbosity = 3
+fuzz = { runs = 1024 }
+
