--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "scripts": {
     "compile": "forge compile",
     "build": "npm run lint:fix && forge clean && forge build",
-    "deploy:holesky": "npm run build && forge script scripts/DeployProxy.s.sol --rpc-url $HOLESKY_RPC_URL --private-key $PRIVATE_KEY --verify -vvv --broadcast",
-    "deploy:hoodi": "npm run build && forge script scripts/DeployProxy.s.sol --rpc-url $HOODI_RPC_URL --private-key $PRIVATE_KEY --etherscan-api-key $ETHERSCAN_API_KEY --verify -vvv --broadcast",
+    "deploy:hoodi-stage": "source .env && forge script --chain hoodi script/DeployAllHoodi.s.sol false --sig 'run(bool)' --rpc-url $HOODI_RPC_URL --verify -vvv --broadcast",
+    "deploy:hoodi-testnet": "source .env && forge script --chain hoodi script/DeployAllHoodi.s.sol true --sig 'run(bool)' --rpc-url $HOODI_RPC_URL --verify -vvv --broadcast",
+    "deploy:mainnet": "source .env && forge script --chain mainnet script/DeployAllMainnet.s.sol --rpc-url $MAINNET_RPC_URL --verify -vvv --broadcast",
     "verify:hoodi": "forge verify-contract --rpc-url https://hoodi.cloud.blockscout.com/api/eth-rpc --verifier blockscout --verifier-url 'https://hoodi.cloud.blockscout.com/api/' $IMPLEMENTATION_ADDRESS src/SSVBasedApps.sol:SSVBasedApps",
     "gas-report": "forge test --gas-report",
     "generate-docs": "solc --include-path node_modules --base-path . --combined-json userdoc,devdoc src/SSVBasedApps.sol --output-dir ./docs --overwrite",
