--- a/.prettierrc
+++ b/.prettierrc
@@ -8,7 +8,7 @@
     {
       "files": "*.sol",
       "options": {
-        "parser": "solidity-parse",
+        "parser": "slang",
         "printWidth": 80,
         "tabWidth": 4,
         "useTabs": false,
