--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "based-applications",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "SSV Based Applications",
   "author": "SSV.Network",
   "repository": {
@@ -23,6 +23,8 @@
     "deploy:hoodi-stage": "source .env && forge script script/DeployAllHoodi.s.sol false --sig 'run(bool)' --rpc-url $HOODI_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
     "deploy:hoodi-prod": "source .env && forge script script/DeployAllHoodi.s.sol true --sig 'run(bool)' --rpc-url $HOODI_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
     "deploy:mainnet": "source .env && forge script script/DeployAllMainnet.s.sol --rpc-url $MAINNET_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
+    "update-modules:hoodi-stage":"source .env && forge script script/UpdateModules.s.sol false [1] --sig 'run(bool,uint8[])' --rpc-url $HOODI_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
+    "update-modules:hoodi-prod":"source .env && forge script script/UpdateModules.s.sol true [1] --sig 'run(bool,uint8[])' --rpc-url $HOODI_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
     "gas-report": "forge test --gas-report",
     "generate-docs": "solc --include-path node_modules --base-path . --combined-json userdoc,devdoc src/SSVBasedApps.sol --output-dir ./docs --overwrite",
     "prepare": "husky",
