--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "based-applications",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "SSV Based Applications",
   "author": "SSV.Network",
   "repository": {
@@ -20,9 +20,14 @@
   "scripts": {
     "compile": "forge compile",
     "build": "npm run lint:fix && forge clean && forge build",
+    "deploy:sepolia": "source .env && forge script script/DeployAllSepolia.s.sol --rpc-url $SEPOLIA_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
     "deploy:hoodi-stage": "source .env && forge script script/DeployAllHoodi.s.sol false --sig 'run(bool)' --rpc-url $HOODI_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
     "deploy:hoodi-prod": "source .env && forge script script/DeployAllHoodi.s.sol true --sig 'run(bool)' --rpc-url $HOODI_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
     "deploy:mainnet": "source .env && forge script script/DeployAllMainnet.s.sol --rpc-url $MAINNET_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
+    "update-modules:hoodi-stage":"source .env && forge script script/UpdateModulesHoodi.s.sol false [0,1,2] --sig 'run(bool,uint8[])' --rpc-url $HOODI_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
+    "update-modules:hoodi-prod":"source .env && forge script script/UpdateModulesHoodi.s.sol true [0,1,2] --sig 'run(bool,uint8[])' --rpc-url $HOODI_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
+    "update-implementation:hoodi-stage":"source .env && forge script script/UpdateNewImplHoodi.s.sol false --sig 'run(bool)' --rpc-url $HOODI_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
+    "update-implementation:hoodi-prod":"source .env && forge script script/UpdateNewImplHoodi.s.sol true --sig 'run(bool)' --rpc-url $HOODI_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
     "gas-report": "forge test --gas-report",
     "generate-docs": "solc --include-path node_modules --base-path . --combined-json userdoc,devdoc src/SSVBasedApps.sol --output-dir ./docs --overwrite",
     "update-modules:hoodi-stage":"source .env && forge script script/UpdateModulesHoodi.s.sol false [2] --sig 'run(bool,uint8[])' --rpc-url $HOODI_RPC_URL --private-key $DEPLOYER_PRIVATE_KEY --verify -vvv --broadcast",
